--- a/public/home.html
+++ b/public/home.html
@@ -1,39 +1,205 @@
 <!doctype html>
-<html ng-app="EmailApp">
+<html ng-app="message">
   <head>
-    <meta charset="utf-8">
-    <title>AngularJS Email App</title>
-    <link href="css/style.css" rel="stylesheet">
-    <style>
-    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-      display: none !important;
-    }
-    </style>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/example.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header" role="banner">
-      <div class="header__text">
-        <p>Angular Mail by <a href="http://www.thinkful.com/a/learn">Thinkful.com</a></p>
+    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html">CSR</a>
       </div>
-    </header>
-
-    <main class="main" role="main">
-      <div ng-view class="flex"></div>
-    </main>
-
-    <!-- Vendor libraries -->
-    <script src="lib/jquery-v1.11.1.js"></script>
-    <script src="lib/angular-v1.2.22.js"></script>
-    <script src="lib/angular-route-v1.2.22.js"></script>
-    <script src="lib/angular-sanitize-v1.2.22.js"></script>
-    <!-- Application Files -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers/InboxCtrl.js"></script>
-    <script src="js/controllers/EmailCtrl.js"></script>
-    <script src="js/factories/InboxFactory.js"></script>
-    <script src="js/factories/EmailFactory.js"></script>
-    <script src="js/directives/InboxDrctv.js"></script>
-    <script src="js/directives/EmailDrctv.js"></script>
+      <div class="navbar-default sidebar" role="navigation">
+        <div class="sidebar-nav navbar-collapse">
+          <ul class="nav" id="side-menu">
+            <li>
+              <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="page-wrapper">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Dashboard</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+      </div>
+      <!-- /.row -->
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-xs-3">
+                  <i class="fa fa-comments fa-5x"></i>
+                </div>
+                <div class="col-xs-9 text-right">
+                  <div class="huge">26</div>
+                  <div>New Comments!</div>
+                </div>
+              </div>
+            </div>
+            <a href="#">
+              <div class="panel-footer">
+                <span class="pull-left">View Details</span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <div class="clearfix"></div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="panel panel-green">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-xs-3">
+                  <i class="fa fa-tasks fa-5x"></i>
+                </div>
+                <div class="col-xs-9 text-right">
+                  <div class="huge">12</div>
+                  <div>New Tasks!</div>
+                </div>
+              </div>
+            </div>
+            <a href="#">
+              <div class="panel-footer">
+                <span class="pull-left">View Details</span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <div class="clearfix"></div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="panel panel-yellow">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-xs-3">
+                  <i class="fa fa-shopping-cart fa-5x"></i>
+                </div>
+                <div class="col-xs-9 text-right">
+                  <div class="huge">124</div>
+                  <div>New Orders!</div>
+                </div>
+              </div>
+            </div>
+            <a href="#">
+              <div class="panel-footer">
+                <span class="pull-left">View Details</span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <div class="clearfix"></div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="panel panel-red">
+            <div class="panel-heading">
+              <div class="row">
+                <div class="col-xs-3">
+                  <i class="fa fa-support fa-5x"></i>
+                </div>
+                <div class="col-xs-9 text-right">
+                  <div class="huge">13</div>
+                  <div>Support Tickets!</div>
+                </div>
+              </div>
+            </div>
+            <a href="#">
+              <div class="panel-footer">
+                <span class="pull-left">View Details</span>
+                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                <div class="clearfix"></div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <i class="fa fa-envelope fa-fw"></i> Messages
+              <div class="pull-right">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+                    Actions
+                    <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu pull-right" role="menu">
+                    <li>
+                      <a href="#">Action</a>
+                    </li>
+                    <li>
+                      <a href="#">Another action</a>
+                    </li>
+                    <li>
+                      <a href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel-body">
+              <div ng-controller="MsgCtrl">
+                <table class="table table-bordered table-hover" id="mailTable">
+                  <thead>
+                    <tr>
+                      <th>Flagged</th>
+                      <th>UserID</th>
+                      <th>Sender</th>
+                      <th>Subject</th>
+                      <th>Received</th>
+                    </tr>
+                  </thead>
+                  <tbody ng-repeat="email in emails">
+                    <tr  ng-class="{'unread': email.Read}" ng-click="open(email)">
+                      <td ng-if="email.Flagged == 'true'"><i class="fa fa-flag"></i></td>
+                      <td ng-if="email.Flagged == 'false'"><i class="fa fa-flag-o"></i></td>
+                      <td>{{ email.RecipientUserID }}</td>
+                      <td>{{ email.Sender }}</td>
+                      <td>{{ email.Subject }}</td>
+                      <td>{{ email.ReceiveDate }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <div class="modal fade" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Subject: {{selectedEmail.Subject}}</h4>
+                      </div>
+                      <div class="modal-body">
+                        <h5>Sender: {{selectedEmail.Sender}}</h5>
+                        <h5>To: {{selectedEmail.RecipientUserID}}</h5>
+                        <h5>Date: {{selectedEmail.ReceiveDate}}</h5>
+                        <h5>Message: </h5>
+                        <iframe id="iframe" style="width:100%; height:500px"></iframe>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary"><i class="fa fa-reply"></i> Reply</button>
+                        <button type="button" class="btn btn-primary"><i class="fa fa-share"></i> Forward</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
