--- a/public/login.html
+++ b/public/login.html
@@ -30,15 +30,10 @@
             <form role="form">
               <fieldset>
                 <div class="form-group">
-                  <input class="form-control" placeholder="Username" name="user" type="text" autofocus ng-model="login.user">
+                  <input class="form-control" placeholder="Username" name="user" type="text" value="" ng-model="user" autofocus>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" placeholder="Password" name="pass" type="password" value="" ng-model="login.pass">
-                </div>
-                <div class="checkbox">
-                  <label>
-                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                  </label>
+                  <input class="form-control" placeholder="Password" name="pass" type="password" value="" ng-model="pass">
                 </div>
                 <!-- Change this to a button or input when using this as a form -->
                 <buton class="btn btn-primary pull-right" ng-click="login()" />Login</button>
